--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -470,6 +470,13 @@
 	</section>
 	</section>
 -->
+
+    <!-- TODO: revive this after release on 19 Apr 2012 section class='appendix'>
+      <h2>Names of inverse properties</h2>
+      <p>Defining them both may lead to split use, and both will need to be handled (doubling the effort). The opposite is true. Not defining them will make people that want them named to choose their own name. To balance these tradeoffs, we choose a preferred inverse and define it in PROV-O. The inverse is not defined, but if users wish to refer to it, they should use the following names.</p>
+      {% include "includes/inverse-names.html" %}
+    </section-->
+
     <section class='appendix'>
       <h2>Acknowledgements</h2>
       <p>Thanks to the members of the Provenance Working Group for their feedback throughout the development of the PROV Ontology and this documentation page. We also thank the developers of the tools that helped create the PROV-O ontology and portions of this page. Without these great tools, developing PROV-O would have been much less of a pleasure.</p>
