--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -8,6 +8,7 @@
     <link href="{{lodspk.home}}prov-o-lode/Primer.css" rel="stylesheet" type="text/css" />
     <link href="{{lodspk.home}}prov-o-lode/rec.css"    rel="stylesheet" type="text/css" />
     <link href="{{lodspk.home}}prov-o-lode/extra.css"  rel="stylesheet" type="text/css" />
+    <link rel="provenance" href="http://www.w3.org/2007/08/pyRdfa/extract?format=turtle&uri=http://aquarius.tw.rpi.edu/prov-wg/prov-o"/>
     <!-- 
       === NOTA BENE ===
       For the three scripts below, if your spec resides on dev.w3 you can check them
