--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
+    "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head xmlns:prov="http://www.w3.org/ns/prov#">
     <title>PROV-O: The PROV Ontology</title>
     <meta http-equiv='Content-Type' content='text/html;charset=utf-8'/>
@@ -8,7 +9,7 @@
     <link href="{{lodspk.home}}prov-o-lode/Primer.css" rel="stylesheet" type="text/css" />
     <link href="{{lodspk.home}}prov-o-lode/rec.css"    rel="stylesheet" type="text/css" />
     <link href="{{lodspk.home}}prov-o-lode/extra.css"  rel="stylesheet" type="text/css" />
-    <link rel="provenance" href="http://www.w3.org/2007/08/pyRdfa/extract?format=turtle&uri=http://aquarius.tw.rpi.edu/prov-wg/prov-o"/>
+    <!-- link rel="provenance" href="http://www.w3.org/2007/08/pyRdfa/extract?format=turtle&uri=http://aquarius.tw.rpi.edu/prov-wg/prov-o"/ -->
     <!-- 
       === NOTA BENE ===
       For the three scripts below, if your spec resides on dev.w3 you can check them
@@ -86,8 +87,8 @@
       }
      </style>
 
-    <script src='http://dev.w3.org/2009/dap/ReSpec.js/js/respec.js' class='remove'></script>
-	<script src="http://www.w3.org/2007/OWL/toggles.js" class="remove"></script>
+     <script src='http://dev.w3.org/2009/dap/ReSpec.js/js/respec.js' class='remove' type="text/javascript"></script>
+     <script src="http://www.w3.org/2007/OWL/toggles.js" class="remove" type="text/javascript"></script>
 	
     <script class='remove'>
 	var addExtraReferences = function() {
@@ -128,7 +129,7 @@
 
       var respecConfig = {
           // specification status (e.g. WD, LCWD, NOTE, etc.). If in doubt use ED.
-          specStatus:           "ED",
+          specStatus:           "WD",
           
           // the specification's short name, as in http://www.w3.org/TR/short-name/
           shortName:            "prov-o",
@@ -138,11 +139,11 @@
           //subtitle   :  "",
 
           // if you wish the publication date to be other than today, set this
-          publishDate:  "2012-04-18",
+          publishDate:  "2012-05-03",
 
           // if the specification's copyright date is a range of years, specify
           // the start date here:
-          // copyrightStart: "2005"
+          copyrightStart: "2011",
 
           // if there is a previously published draft, uncomment this and set its YYYY-MM-DD date
           // and its maturity status
@@ -150,7 +151,7 @@
           previousMaturity:  "FPWD",
 
           // if there a publicly available Editor's Draft, this is the link
-          edDraftURI:           "http://dvcs.w3.org/hg/prov/raw-file/default/ontology/ProvenanceFormalModel.html", // http://www.w3.org/2011/prov/wiki/D1--NOT-YET-AVAILABLE",
+          edDraftURI:           "http://dvcs.w3.org/hg/prov/raw-file/default/ontology/prov-o.html",
 
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2009-08-05",
@@ -169,7 +170,6 @@
                 company: "Case Western Reserve University, USA" },
 			  { name: "Deborah McGuinness", url: "http://tw.rpi.edu/instances/Deborah_L_McGuinness",
 	                company: "Rensselaer Polytechnic Institute, USA" },
-	          { name: "Mike Lang, Jr.", company: "Revelytix, USA"},
           ],
 
           // authors, add as many as you like. 
@@ -188,6 +188,7 @@
 			  { name: "Daniel Garijo",
 			        url:"http://www.oeg-upm.net/index.php/en/phdstudents/28-dgarijo",
 	                company: "Universidad Politécnica de Madrid, Spain" },
+	          { name: "Mike Lang, Jr.", company: "Revelytix, USA"},
 			  { name: "Stian Soiland-Reyes",
 	                url:"http://soiland-reyes.com/stian/",
 	               company: "University of Manchester, UK" },
@@ -231,8 +232,31 @@
     </section>
    
     <section id='sotd'>
-	  <p>
-	  This specification defines the PROV Ontology as the normative representation of the PROV Data Model using the Web Ontology Language (OWL2). This document is part of a set of specifications being created to address the issue of provenance interchange in Web applications. This document is accompanied by (1) the PROV Data Model, (2) the PROV Access and Query, and (3) the Primer documents.
+      <h4>PROV Family of Specifications</h4>
+      This document is part of the PROV family of specifications, a set of specifications defining various aspects that are necessary to achieve the vision of inter-operable
+      interchange of provenance information in heterogeneous environments such as the Web.  The specifications are:
+      <ul>
+      <li> PROV-DM, the PROV data model for provenance;</li>
+      <li> PROV-CONSTRAINTS, a set of constraints applying to the PROV data model;</li>
+      <li> PROV-N, a notation for provenance aimed at human consumption;</li>
+      <li> PROV-O, the PROV ontology, an OWL-RL ontology allowing the mapping of PROV to RDF; (this document)</li>
+      <li> PROV-AQ, the mechanisms for accessing and querying provenance; </li>
+      <li> PROV-PRIMER, a primer for the PROV data model;</li>
+      <li> PROV-SEM, a formal semantics for the PROV data model;</li>
+      <li> PROV-XML, an XML schema for the PROV data model.</li>
+      </ul>
+      <h4>How to read the PROV Family of Specifications</h4>
+      <ul>
+      <li>The primer is the entry point to PROV offering an introduction to the provenance model.</li>
+      <li>The Linked Data and Semantic Web community should focus on PROV-O defining PROV classes and properties specified in an OWL-RL ontology. For further details, PROV-DM and PROV-CONSTRAINTS specify the constraints applicable to the data model, and its interpretation. PROV-SEM provides a mathematical semantics.</li>
+      <li>The XML community should focus on PROV-XML defining an XML schema for PROV. Further details can also be found in PROV-DM, PROV-CONSTRAINTS, and PROV-SEM.</li>
+      <li>Developers seeking to retrieve or publish provenance should focus on PROV-AQ.</li>
+      <li>Readers seeking to implement other PROV serializations
+      should focus on PROV-DM and PROV-CONSTRAINTS.  PROV-O, PROV-N, PROV-XML offer examples of mapping to RDF, text, and XML, respectively.</li>
+      </ul>
+
+      <h4>PROV-O Second Working Draft</h4>
+	  <p>This specification defines the PROV Ontology as the normative representation of the PROV Data Model using the Web Ontology Language (OWL2). Following feedback, the structure of the document has been reorganized to suit a gradual introduction to the terms available in PROV-O, permitting the addition of more elaborate terms as users understand the earlier terms. A cross reference was added and is created directly from the OWL ontology. Examples throughout this document are taken directly from the working group's version control system.
 	  </p>	
     </section>
 
